[package]
name = "maze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
window_rs = {git = "https://github.com/NoodleSamaChan/window_rs.git", rev = "6068419"}
#window_rs = { path = "../window_rs"}
graphic = {git = "https://github.com/NoodleSamaChan/graphic.git", rev = "4cf1ea4"}

[dev-dependencies]
insta = "1.38.0"
